fix: mobile alignment

--- a/components/Hero.module.scss
+++ b/components/Hero.module.scss
@@ -52,7 +52,7 @@
 
     @media (max-width: 580px) {
         text-align: center;
-        font-size: 2rem;
+        font-size: 3rem;
     }
 }
 
